Using ZGC for benchmarks.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>